frontend uses axios npm package to make requests (only top10likes for now) to the backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon index.js"
+    "start":"npm index.js",
+    "backend": "nodemon index.js",
+    "frontend":"cd ../frontend && npm run start",
+    "dev":"concurrently \"npm run backend\" \"npm run frontend\" "
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +20,7 @@
     "mongoose": "^5.6.6"
   },
   "devDependencies": {
+    "concurrently": "^4.1.1",
     "nodemon": "^1.19.1"
   }
 }
