--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-table": "^6.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:3001"
+  "proxy": "http://localhost:3001"
 }
