--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"npm index.js",
+    "start": "npm index.js",
     "backend": "nodemon index.js",
-    "frontend":"cd ../frontend && npm run start",
-    "dev":"concurrently \"npm run backend\" \"npm run frontend\" "
+    "frontend": "cd ../frontend && npm run start",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\" "
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.1"
   }
 }
